test/error/E6.chigfn
{
	"type": "function",
	"name": "helloworld",
	"nodes": {
		"if": {
		}
	}
}
